[package]
name = "runt-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Live Ethereum proof verification demos for Runt"

[[bin]]
name = "runt-demo"
path = "src/main.rs"

[dependencies]
runt-host = { path = "../runt-host" }
runt-core = { path = "../runt-core" }
runt-abi = { path = "../runt-abi" }
wasmtime = "45"
anyhow = "1"
sha3 = "0.10"
hex = "0.4"
serde_json = "1"
ureq = "3"
blst = "0.3"
rand = "0.10"
