[package]
name = "runt-host"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Host implementation for Runt — verifier loading, crypto providers, routing"

[dependencies]
runt-core = { path = "../runt-core" }
runt-abi = { path = "../runt-abi" }
wasmtime = "45"
anyhow = "1"
thiserror = "2"
tiny-keccak = { version = "2", features = ["keccak"] }
sha3 = "0.10"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blst = "0.3.16"
ark-bn254 = "0.6.0"
ark-ec = "0.6.0"
ark-ff = "0.6.0"
