[package]
name = "hello-verifier"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Verifier WASM component for Runt"

[lib]
crate-type = ["lib"]

[dependencies]
runt-wit = { path = "../../runt-wit" }

[package.metadata.component]
package = "runt:verifier"

[package.metadata.component.target]
world = "runt-verifier"
